fix : 물품 서비스 리액티브 형식으로 변경